--- a/_notebooks/2020-01-12-post-here.ipynb
+++ b/_notebooks/2020-01-12-post-here.ipynb
@@ -20,14 +20,14 @@
    "source": [
     "---\n",
     "\n",
-    "## Introduction"
+    "# Introduction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Problem\n",
+    "## The Problem\n",
     "\n",
     "Reddit is an expansive site. Anyone who has spent any significant amount of time on it knows what I mean. There is a subreddit for seemingly every topic anyone could ever want to discuss or even think about (and many that most do not want think about).\n",
     "\n",
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Solution\n",
+    "## The Solution\n",
     "\n",
     "The goal with the Post Here app, as mentioned, is to provide a tool that makes it quick and easy to find the most appropriate subreddits for any given post. A user would simply provide the title and text of the their prospective post and the app would provide the user with a list of subreddit recommendations.\n",
     "\n",
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### My Role\n",
+    "## My Role\n",
     "\n",
     "I worked on the Post Here app with a remote, interdisciplinary team of data scientists, machine learning engineers, and web developers. I was one of two machine learning engineers on the team, responsible for the entire process of building and training the machine learning models. The two data scientists on the team were primarily responsible for building and deploying the API.\n",
     "\n",
@@ -105,8 +105,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "## Imports and Configuration"
    ]
   },
@@ -163,7 +161,7 @@
    "source": [
     "---\n",
     "\n",
-    "## The Data"
+    "# The Data"
    ]
   },
   {
@@ -179,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wrangling and Exploration\n",
+    "## Wrangling and Exploration\n",
     "\n",
     "First, I needed to reduce the size of the dataset. I defined a subset of 12 categories which I thought were most relevant to the task at hand, and used that list to do the initial pruning. Those 12 categories left me with 305 unique subreddits and 305,000 rows. The list I used was as follows:\n",
     "\n",
@@ -296,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Nulls\n",
+    "### Nulls\n",
     "\n",
     "Kaggle says that 12%, 25%, and 39% of the subreddit, title, and selftext columns are null, respectively. If that is indeed the case, they did not get read into the dataframe correctly. However, it could be an error on Kaggle's part, seeing as there is no mention of these anywhere else in the description or blog post or article, nor sign of them during my explorations."
    ]
@@ -330,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Preprocess\n",
+    "### Preprocessing\n",
     "\n",
     "To prune the list of subreddits, I'll load in the `subreddit_info.csv` file, join, then choose a certain number of categories (category_1) to filter on."
    ]
@@ -1137,14 +1135,14 @@
    "source": [
     "---\n",
     "\n",
-    "## Modeling"
+    "# Modeling"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Label Encoding"
+    "## Label Encoding"
    ]
   },
   {
@@ -1181,7 +1179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vectorization\n",
+    "## Vectorization\n",
     "\n",
     "A vectorizer is used to extract numerical features (information) from a corpus of natural language text. I used a [bag-of-words](https://en.wikipedia.org/wiki/Bag-of-words_model) method of vectorization, which for the most part, disregards grammar.\n",
     "\n",
@@ -1267,7 +1265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature Selection\n",
+    "## Feature Selection\n",
     "\n",
     "As mentioned previously, the size of the corpus means the dimensionality of the featureset after vectorization will be very high. I passed in 100,000 as the maximum number of features to the vectorizer, limiting the initial size of the vocab. However, the features would have to be reduced more before training the model, as it is generally not good practice to have a larger number of features (100,000) than observations (91,500).\n",
     "\n",
@@ -1313,7 +1311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model validation\n",
+    "## Model validation\n",
     "\n",
     "In this case, the model has a target that it is attempting to predict—a supervised problem. Therefore, the performance can be measured on validation and test sets.\n",
     "\n",
@@ -1326,7 +1324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Baseline\n",
+    "### Baseline\n",
     "\n",
     "For the baseline model, I decided to go with a basic random forest. This choice was somewhat arbitrary, though I was curious to see how a random forest would do with such a high target cardinality (number of classes/categories).\n",
     "\n",
@@ -1432,7 +1430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Multinomial Naive Bayes\n",
+    "### Multinomial Naive Bayes\n",
     "\n",
     "Multinomial naive Bayes is a probabilistic learning method for multinomially distributed data, and one of two classic naive Bayes algorithms used for text classification. I decided to iterate with this algorithm because it is meant for text classification tasks.\n",
     "\n",
@@ -1467,7 +1465,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Evaluate on validation set"
+    "### Evaluate on validation set"
    ]
   },
   {
@@ -1525,7 +1523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Evaluate on test set"
+    "### Evaluate on test set"
    ]
   },
   {
@@ -1583,7 +1581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recommendations\n",
+    "## Recommendations\n",
     "\n",
     "The API should return a list of recommendations, not a single prediction. To accomplish this, I wrote a function that returns the top 5 most likely subreddits and their respective probabilities."
    ]
@@ -1783,7 +1781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model deployment\n",
+    "## Model deployment\n",
     "\n",
     "As mentioned, the model, vocab, and feature selector were all serialized using Python's pickle module. In the Flask app, the pickled objects are loaded and ready for use, just like that.\n",
     "\n",
@@ -1796,7 +1794,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Final Thoughts\n",
+    "# Final Thoughts\n",
     "\n",
     "For me, the most important and valuable aspects of this project were mainly surrounding the challenge of scope management. I constantly had to ask myself, \"What is the best version of this I can create given our limitations?\"\n",
     "\n",
@@ -1811,7 +1809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Scope Management, Revisited\n",
+    "## Scope Management, Revisited\n",
     "\n",
     "As time was very short while building this initial recommendation API, there are many things that we wished we could have done but simply did not have the time. Here are a few of the more obvious improvements that could be made.\n",
     "\n",
