Added quotes around post subtitle

--- a/_notebooks/2020-01-12-post-here.ipynb
+++ b/_notebooks/2020-01-12-post-here.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "# Post Here\n",
-    "\n",
-    "> Worked as a machine learning engineer on a remote, interdisciplinary team to build an app for recommending subreddits.\n",
+    "> \"Worked as a machine learning engineer on a remote, interdisciplinary team to build an app for recommending subreddits.\"\n",
     "\n",
     "* toc: true\n",
     "* badges: true\n",
@@ -18,8 +17,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "# Introduction"
    ]
   },
