--- a/_notebooks/2020-03-08-trash-panda.ipynb
+++ b/_notebooks/2020-03-08-trash-panda.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "# Trash Panda\n",
-    "\n",
-    "> Worked for 8 weeks as a machine learning engineer on a remote interdisciplinary team; helped gather and label over 80,000 images to train an object detection model; built a Flask API to deploy model.\n",
+    "> \"Worked for 8 weeks as a machine learning engineer on a remote interdisciplinary team; helped gather and label over 80,000 images to train an object detection model; built a Flask API to deploy model.\"\n",
     "\n",
     "* toc: true\n",
     "* badges: true\n",
@@ -18,8 +17,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "## Introduction"
    ]
   },
