Fixed front matter; dashes instead of asterisks

--- a/_notebooks/2020-01-12-post-here.ipynb
+++ b/_notebooks/2020-01-12-post-here.ipynb
@@ -7,16 +7,18 @@
     "# Post Here\n",
     "> \"Worked as a machine learning engineer on a remote, interdisciplinary team to build an app for recommending subreddits.\"\n",
     "\n",
-    "* toc: true\n",
-    "* badges: true\n",
-    "* categories: [workshop]\n",
-    "* image: images/post-here-landing-crop.png"
+    "- toc: true\n",
+    "- badges: true\n",
+    "- categories: [workshop]\n",
+    "- image: images/post-here-landing-crop.png"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "# Introduction"
    ]
   },
