--- a/_notebooks/2020-03-08-trash-panda.ipynb
+++ b/_notebooks/2020-03-08-trash-panda.ipynb
@@ -7,16 +7,18 @@
     "# Trash Panda\n",
     "> \"Worked for 8 weeks as a machine learning engineer on a remote interdisciplinary team; helped gather and label over 80,000 images to train an object detection model; built a Flask API to deploy model.\"\n",
     "\n",
-    "* toc: true\n",
-    "* badges: true\n",
-    "* categories: [workshop]\n",
-    "* image: images/trash-panda-icon.png"
+    "- toc: true\n",
+    "- badges: true\n",
+    "- categories: [workshop]\n",
+    "- image: images/trash-panda-icon.png"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "## Introduction"
    ]
   },
