Minor troubleshooting update

--- a/_notebooks/2019-11-24-medizen.ipynb
+++ b/_notebooks/2019-11-24-medizen.ipynb
@@ -1330,14 +1330,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Design of page (desktop layout) where users can pick their preferences.](https://raw.githubusercontent.com/tobias-fyi/assetstash/master/visual/images/medizen/desktop-4-filters.png \"Design of page where users can pick their preferences.\")"
+    "![Design of page (desktop layout) where users can pick their preferences.](https://raw.githubusercontent.com/tobias-fyi/assetstash/master/visual/images/medizen/desktop-4-filters.png \"Design of page where users can pick their preferences\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Design of page (desktop layout) where users can check off their desired effects.](https://raw.githubusercontent.com/tobias-fyi/assetstash/master/visual/images/medizen/desktop-5-filters-fx.png \"Design of page  where users can check off their desired effects.\")"
+    "![Design of page (desktop layout) where users can check off their desired effects.](https://raw.githubusercontent.com/tobias-fyi/assetstash/master/visual/images/medizen/desktop-5-filters-fx.png \"Design of page  where users can check off their desired effects\")"
    ]
   },
   {
@@ -1540,7 +1540,7 @@
     "\n",
     "One of the most valuable skills I began learning during this project was how to manage Git as part of a team. I had been using Git to manage my own code and writing repositories for over a year by this point, but had never done so as part of a team. I had a lot of fun researching, discussing, and applying best practices with my teammates, primarily one teammate in particular, Vera Mendes. The link to her blog can be found below.\n",
     "\n",
-    "> [Vera Mendes' blog](https://veramendes.github.io/)\n",
+    "[Vera Mendes' blog](https://veramendes.github.io/)\n",
     "\n",
     "Another obvious, though still very important skill, that this experience allowed me to practice was effective and adaptive teamwork.\n",
     "\n",
@@ -1552,6 +1552,13 @@
     "\n",
     "As always, thank you for reading, and I'll see you in the next one!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
