Updated front matter

--- a/_notebooks/2020-03-08-trash-panda.ipynb
+++ b/_notebooks/2020-03-08-trash-panda.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "- toc: true\n",
     "- badges: true\n",
+    "- author: Tobias Reaper\n",
     "- categories: [workshop]\n",
+    "- comments: true\n",
     "- image: images/trash-panda-icon.png"
    ]
   },
