--- a/_notebooks/2020-09-07-savor-data-analysis-part-1.ipynb
+++ b/_notebooks/2020-09-07-savor-data-analysis-part-1.ipynb
@@ -5,14 +5,14 @@
    "metadata": {},
    "source": [
     "# Savor Data\n",
+    "> \"Taking advantage of my own big data.\"\n",
     "\n",
-    "> Taking advantage of my own big data.\n",
-    "\n",
-    "* toc: true\n",
-    "* badges: true\n",
-    "* author: Tobias Reaper\n",
-    "* comments: false\n",
-    "* categories: [EDA]"
+    "- toc: true\n",
+    "- badges: true\n",
+    "- author: Tobias Reaper\n",
+    "- comments: true\n",
+    "- categories: [blog]\n",
+    "- image: images/savor-cover-chart-temp.png"
    ]
   },
   {
