Added print-fiction embedded images

--- a/_notebooks/2019-10-25-print-fiction.ipynb
+++ b/_notebooks/2019-10-25-print-fiction.ipynb
@@ -27,7 +27,6 @@
    },
    "source": [
     "---\n",
-    "---\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -94,8 +93,6 @@
     "id": "NCMU9Y5DVvT5"
    },
    "source": [
-    "---\n",
-    "\n",
     "### Imports and Configuration"
    ]
   },
@@ -198,8 +195,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "### Scraping\n",
     "\n",
     "I did not build the Scrapy scraper completely from scratch, though I probably would have if I hadn't run across a small project on GitHub that was built for this exact purpose. I figured the scraper itself wasn't as important to this particular project as the data it produced, so I decided to use it instead of building my own.\n",
@@ -922,8 +917,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "### Data wrangling and exploration\n",
     "\n",
     "Dataset in hand, it was time to explore and wrangle!\n",
@@ -1325,8 +1318,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "### Null values\n",
     "\n",
     "A feature with a large proportion of null values is far less likely to be useful, as imputing (filling in) the missing data can add noise—or even artificial patterns—that would adversely affect the model. Therefore, a feature such as that can usually be considered extraneous and removed from the dataset. With a small enough proportion of null values, imputing or otherwise filling in the missing data is more likely to preserve the preexisting patterns in those features.\n",
@@ -2029,8 +2020,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "### Distributions and outliers\n",
     "\n",
     "As can be expected with media such as books, there were some large outliers with regards to popularity. While the vast majority of books had relatively few ratings and even fewer reviews, where is a relatively small group of authors that struck gold, with them and their books becoming household names.\n",
@@ -2493,8 +2482,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "### Feature relationships\n",
     "\n",
     "Another line of inquiry I wanted to explore before diving into the model was relationships between features and between the target and the features. The obvious first step was to create a matrix of scatterplots between what I believed to be the most important features and the target. As the target is binary, I thought it best to represent it as a third dimension in each of the scatterplots: color."
@@ -2602,7 +2589,6 @@
    },
    "source": [
     "---\n",
-    "---\n",
     "\n",
     "## The Model"
    ]
@@ -2611,8 +2597,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "### Baseline Models\n",
     "\n",
     "As I discussed above, the most complex model is not necessarily the best model. It's generally a good idea to start with a simple baseline model and progressively add complexity in proceeding iterations. The chosen evaluation metric will (ideally) indicate when the added complexity is beneficial, and when it is not."
@@ -2996,8 +2980,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "### Model validation\n",
     "\n",
     "As always, before jumping into building and training I needed to make some decisions about how I will measure success—or, more accurately, how the model measures success. Choosing appropriate evaluation metrics is crucial to get an accurate understanding of how well a model is fitting (or overfitting) the data. An overly complex model will likely overfit the training data, leading to a model that performs poorly on new inputs on which is was not trained. Decision trees are particularly prone to overfitting"
@@ -3227,8 +3209,6 @@
     "id": "QHAQC5nIIT6z"
    },
    "source": [
-    "---\n",
-    "\n",
     "### Feature Engineering\n",
     "\n",
     "When I initially started this project, I went through the process of validating and training a model or two that tried to predict the average rating of books. This was by far the most common target chosen by those who started Kaggle kernels using other GoodReads datasets. Although this may have the most obvious business value if I was a data scientist working for a book publisher, to me this wasn't a particularly interesting target to try to predict."
@@ -3938,8 +3918,6 @@
     "id": "jDCfJc9CIT68"
    },
    "source": [
-    "---\n",
-    "\n",
     "### Iteration\n",
     "\n",
     "As I mentioned above, a good general approach to finding and training the best model for a particular problem and dataset is to start simple and iterate. I already iterated to select the best features. Next up was to iterate on algorithms and their various hyperparameters."
@@ -8063,8 +8041,6 @@
     "id": "qCUPn-XuIT7w"
    },
    "source": [
-    "---\n",
-    "\n",
     "### Predicted probabilities\n",
     "\n",
     "One way to interpret a trained model is to inspect the predictions that the model made on the test set, either individually or through various descriptive statistics and visualizations. A key component to this is the probabilities underlying each of the predictions.\n",
@@ -8132,11 +8108,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example false negative prediction.](assets/visualizations/shap_fn_1.png)\n",
+    "![Example false negative prediction](images/print-fiction/shap_fn_1.png)\n",
     "\n",
-    "![Example false negative prediction.](assets/visualizations/shap_fn_2.png)\n",
+    "![Example false negative prediction](images/print-fiction/shap_fn_2.png)\n",
     "\n",
-    "![Example false negative prediction.](assets/visualizations/shap_fn_3.png)"
+    "![Example false negative prediction](images/print-fiction/shap_fn_3.png)"
    ]
   },
   {
@@ -8152,18 +8128,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example false negative prediction.](assets/visualizations/shap_fp_1.png)\n",
+    "![Example false negative prediction](images/print-fiction/shap_fp_1.png)\n",
     "\n",
-    "![Example false negative prediction.](assets/visualizations/shap_fp_2.png)\n",
+    "![Example false negative prediction](images/print-fiction/shap_fp_2.png)\n",
     "\n",
-    "![Example false negative prediction.](assets/visualizations/shap_fp_3.png)"
+    "![Example false negative prediction](images/print-fiction/shap_fp_3.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
     "---\n",
     "\n",
     "## Deployment\n",
@@ -8180,61 +8155,6 @@
     "\n",
     "As always, thank you for reading and I'll see you in the next one!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "p8MrKRFRIT7o"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "GujxCzg8IT7r"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "qCUPn-XuIT7w"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "QGXwE6_OIT7z"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "cmVOAg53IT71"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
