--- a/_notebooks/2019-10-25-print-fiction.ipynb
+++ b/_notebooks/2019-10-25-print-fiction.ipynb
@@ -8108,11 +8108,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example false negative prediction](images/print-fiction/shap_fn_1.png)\n",
-    "\n",
-    "![Example false negative prediction](images/print-fiction/shap_fn_2.png)\n",
-    "\n",
-    "![Example false negative prediction](images/print-fiction/shap_fn_3.png)"
+    "![Example false negative prediction](print-fiction/shap_fn_1.png)\n",
+    "![Example false negative prediction](print-fiction/shap_fn_2.png)\n",
+    "![Example false negative prediction](print-fiction/shap_fn_3.png)"
    ]
   },
   {
@@ -8128,11 +8126,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example false negative prediction](images/print-fiction/shap_fp_1.png)\n",
-    "\n",
-    "![Example false negative prediction](images/print-fiction/shap_fp_2.png)\n",
-    "\n",
-    "![Example false negative prediction](images/print-fiction/shap_fp_3.png)"
+    "![Example false negative prediction](print-fiction/shap_fp_1.png)\n",
+    "![Example false negative prediction](print-fiction/shap_fp_2.png)\n",
+    "![Example false negative prediction](print-fiction/shap_fp_3.png)"
    ]
   },
   {
