Updated embedded images to test captions

--- a/_notebooks/2019-10-25-print-fiction.ipynb
+++ b/_notebooks/2019-10-25-print-fiction.ipynb
@@ -16,7 +16,7 @@
     "- author: Tobias Reaper\n",
     "- comments: true\n",
     "- categories: [workshop]\n",
-    "- image: images/booklineshelf.png"
+    "- image: images/booklineshelf.jpg"
    ]
   },
   {
@@ -8108,9 +8108,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example false negative prediction](print-fiction/shap_fn_1.png)\n",
-    "![Example false negative prediction](print-fiction/shap_fn_2.png)\n",
-    "![Example false negative prediction](print-fiction/shap_fn_3.png)"
+    "![](print-fiction/shap_fn_1.png \"Example false negative prediction\")\n",
+    "\n",
+    "![](print-fiction/shap_fn_2.png \"Example false negative prediction\")\n",
+    "\n",
+    "![](print-fiction/shap_fn_3.png \"Example false negative prediction\")"
    ]
   },
   {
@@ -8126,9 +8128,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example false negative prediction](print-fiction/shap_fp_1.png)\n",
-    "![Example false negative prediction](print-fiction/shap_fp_2.png)\n",
-    "![Example false negative prediction](print-fiction/shap_fp_3.png)"
+    "![](print-fiction/shap_fp_1.png \"Example false negative prediction\")\n",
+    "\n",
+    "![](print-fiction/shap_fp_2.png \"Example false negative prediction\")\n",
+    "\n",
+    "![](print-fiction/shap_fp_3.png \"Example false negative prediction\")"
    ]
   },
   {
