Custom domain deployment settings

--- a/_notebooks/2019-10-25-print-fiction.ipynb
+++ b/_notebooks/2019-10-25-print-fiction.ipynb
@@ -216,8 +216,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Convert data to tabular format\n",
-    "\n",
     "The output of the scraper was a set of JSON files. In order to use it in the project, I'll need to convert to Pandas DataFrame."
    ]
   },
@@ -388,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create and export books DataFrame"
+    "Create and export books DataFrame"
    ]
   },
   {
