Started cleaning up notebooks; print-fiction up to null values section

--- a/_notebooks/2019-10-25-print-fiction.ipynb
+++ b/_notebooks/2019-10-25-print-fiction.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "`print(fiction)` is a solo project I worked on to explore the data on and around fictional stories.\n",
+    "print(fiction) is a solo project I worked on to explore the data on and around fictional stories.\n",
     "\n",
     "I used Scrapy to scrape metadata for over 20,000 books from GoodReads and used it to train a series of machine learning classifiers. The final version of the model classified books as either fiction or nonfiction with ~80% accuracy.\n",
     "\n",
@@ -79,11 +79,7 @@
     "\n",
     "...which is really just a cliché way of saying I wanted to explore the differences between nonfiction and fiction stories. My favorite method of consuming science-fiction is through books. Therefore, I chose to look at the differences between fiction and nonfiction books.\n",
     "\n",
-    "Without diving into the actual content of books (that's a project for a later time when I have more experience with natural language processing), my goal was to look for patterns in the book metadata that could distinguish the two genres.\n",
-    "\n",
-    "One last quick note before getting into it.\n",
-    "\n",
-    "I'm not going to walk through every single step (though I'll do my best to paint the whole picture) or show the actual code in this article. If you're curious about the nitty-gritty details and code I wrote for any of the steps, the Jupyter notebooks found at the link below walk through all of it."
+    "Without diving into the actual content of books, my goal was to look for patterns in the book metadata that could distinguish the two classes of books."
    ]
   },
   {
@@ -93,7 +89,7 @@
     "id": "NCMU9Y5DVvT5"
    },
    "source": [
-    "### Imports and Configuration"
+    "Imports and Configuration"
    ]
   },
   {
@@ -110,47 +106,20 @@
    },
    "outputs": [],
    "source": [
+    "#collapse\n",
     "# === General Imports === #\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from scipy.stats import randint, uniform\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from scipy.stats import randint, uniform"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "sgtmOkO6IT5Q"
-   },
-   "outputs": [],
-   "source": [
     "# === Configure === #\n",
     "%matplotlib inline\n",
     "pd.options.display.max_rows = 200\n",
-    "pd.options.display.max_columns = 200"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 129
-    },
-    "colab_type": "code",
-    "id": "f01v7xNdIT5W",
-    "outputId": "c8c09332-0f42-488e-ca0f-0f601510be12"
-   },
-   "outputs": [],
-   "source": [
-    "# === ML Imports === #\n",
+    "pd.options.display.max_columns = 200\n",
     "\n",
+    "# === ML Imports === #\n",
     "# Preprocessing\n",
     "import category_encoders as ce\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -225,29 +194,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
     "# === Path to json data === #\n",
-    "datapath = \"/Users/Tobias/workshop/vela/ds/interview_prep/practice/print-fiction/assets/json_data\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/Users/Tobias/workshop/vela/ds/interview_prep/practice/print-fiction/assets/json_data/book_must_read_01_20.jl',\n",
-       " '/Users/Tobias/workshop/vela/ds/interview_prep/practice/print-fiction/assets/json_data/book_must_read_21_200.jl',\n",
-       " '/Users/Tobias/workshop/vela/ds/interview_prep/practice/print-fiction/assets/json_data/book_must_read_201_216.jl']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "datapath = \"/Users/Tobias/workshop/vela/ds/interview_prep/practice/print-fiction/assets/json_data\"\n",
+    "\n",
     "# === Create the book filepaths === #\n",
     "bookfiles = [  # List of book json files to be included in the books dataframe\n",
     "    \"book_must_read_01_20.jl\",\n",
@@ -265,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Functions to combine files into single DataFrame and do some preprocessing"
+    "In case you're curious, here are some functions I wrote to read and combine json files into single DataFrame and do some preprocessing."
    ]
   },
   {
@@ -274,6 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#collapse\n",
     "def json_cat(json_files):\n",
     "    \"\"\"Reads and concatenates a list of .jl (json lines) \n",
     "    files into a single dataframe.\n",
@@ -292,6 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#collapse\n",
     "def encode_book_genres(df):\n",
     "    \"\"\"Deconcatenates top 30 book genres into separate\n",
     "    features, OneHotEncoding style.\n",
@@ -324,6 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#collapse\n",
     "def book_pub_date(df):\n",
     "    \"\"\"Deconcatenates book publish_date to three separate features\n",
     "    for year, month, and day. Drops the original publish_date feature.\n",
@@ -348,6 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#collapse\n",
     "def book_cat(paths_list, output_filename):\n",
     "    \"\"\"Reads and concatenates a list of book_*.jl (json lines) files.\"\"\"\n",
     "\n",
@@ -355,11 +309,6 @@
     "    df = json_cat(paths_list)\n",
     "\n",
     "    # === Initial wrangling === #\n",
-    "    # I will address these three steps later on\n",
-    "    # df = df.dropna(subset=[\"genres\"])  # Drop rows with null \"genres\"\n",
-    "    # df = encode_book_genres(df)  # Break out genres into top 30\n",
-    "    # df = book_pub_date(df)  # Break out publish_date into components\n",
-    "\n",
     "    df = df.drop_duplicates(subset=[\"url\"])  # Drop duplicate records\n",
     "    # Format column names with pyjanitor\n",
     "    df = (df.clean_names())\n",
@@ -380,13 +329,6 @@
     "    print(f\"Created dataframe and saved to current directory as '{output_filename}'\")\n",
     "    \n",
     "    return df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create and export books DataFrame"
    ]
   },
   {
@@ -903,10 +845,7 @@
    ],
    "source": [
     "# === Load the dataset === #\n",
-    "# This version is directly from the scraping, minimal processing\n",
-    "data_path = \"assets/must_read_books-01.csv\"\n",
-    "\n",
-    "books = pd.read_csv(data_path)\n",
+    "books = pd.read_csv(\"assets/must_read_books-01.csv\")\n",
     "print(books.shape)\n",
     "books.head(3)"
    ]
@@ -1290,7 +1229,6 @@
    ],
    "source": [
     "# === Break out publish_date into components === #\n",
-    "\n",
     "def book_pub_date(df: pd.DataFrame):\n",
     "    \"\"\"Deconcatenates book publish_date to three separate features\n",
     "    for year, month, and day. Drops the original publish_date feature.\n",
@@ -1364,6 +1302,7 @@
     }
    ],
    "source": [
+    "#collapse\n",
     "books.isnull().sum()"
    ]
   },
@@ -1400,6 +1339,7 @@
     "# import missingno as msno\n",
     "msno.matrix(books)\n",
     "plt.title(\"Null values by feature\")\n",
+    "# Settings for saving as image\n",
     "# plt.tight_layout()\n",
     "# plt.savefig(\"null_values_by_feature.png\", dpi=80)"
    ]
@@ -1536,8 +1476,8 @@
     }
    ],
    "source": [
+    "#collapse\n",
     "# === Encode the 'genres' feature === #\n",
-    "\n",
     "def encode_book_genres(df: pd.DataFrame):\n",
     "    \"\"\"Deconcatenates top 30 book genres into\n",
     "    separate features, OneHotEncoding style.\n",
