Some minor updates to notebooks and home page

--- a/_notebooks/2019-10-25-print-fiction.ipynb
+++ b/_notebooks/2019-10-25-print-fiction.ipynb
@@ -38,17 +38,7 @@
     "\n",
     "I built an interactive dashboard using Plotly Dash that can be used to tinker with the model parameters and view the resulting prediction in real time.\n",
     "\n",
-    "You can find the current live version of the app here:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "kM63g2O2IT5B"
-   },
-   "source": [
-    "> [print(fiction)](http://print-fiction.herokuapp.com/)"
+    "> Note: You can find the current live version of the app [here](http://print-fiction.herokuapp.com/)."
    ]
   },
   {
@@ -844,6 +834,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "# === Load the dataset === #\n",
     "books = pd.read_csv(\"assets/must_read_books-01.csv\")\n",
     "print(books.shape)\n",
