--- a/_notebooks/2020-09-07-savor-data-analysis-part-1.ipynb
+++ b/_notebooks/2020-09-07-savor-data-analysis-part-1.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Savor Data\n",
-    "> \"Taking advantage of my own big data.\"\n",
+    "# \"Savor Data, Part 1\"\n",
+    "> \"Exploring my own big data.\"\n",
     "\n",
     "- toc: true\n",
     "- badges: true\n",
